# org.muhkuh.lua-lualxi

./: .cproject  .project  CMakeLists.txt  Jenkinsfile  build_artifact.py
doc/: scpi_commands.txt
examples/: test.lua
lualxi/: CMakeLists.txt  lualxi.i  wrapper.cpp  wrapper.h
lualxi/installer/lua5.1/: lualxi.xml  lualxi_windows.xml
lualxi/installer/lua5.4/: lualxi.xml  lualxi_windows.xml
